fix search payload and spacing

--- a/apps/shared/scss/global.scss
+++ b/apps/shared/scss/global.scss
@@ -115,16 +115,6 @@ pre {
     box-shadow: none !important;
 }
 
-.dark-theme {
-    .custom-datepicker {
-        .date-input {
-            .float-label {
-                background: transparent !important;
-            }
-        }
-    }
-}
-
 // .border {
 //     border: 1px solid var(--color-common-border);
 // }
